--- a/IE307.N11.csproj
+++ b/IE307.N11.csproj
@@ -9,4 +9,10 @@
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />  
     <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Views\DecksPage.xaml.cs">
+      <DependentUpon>DecksPage.xaml</DependentUpon>
+    </Compile>
+  </ItemGroup>
 </Project>
